@@ -37,4 +37,5 @@ Changes:
     - Update methods 
     - Delete useless code.
 31. Move FileHandling class to Files/
+32. Update Formats class Added formatSeconds for converting time to h:m:s.
 	
